# bizops

./: .gitignore  CLAUDE.md  LICENSE  README.md  mcp_config_example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: gmail-setup.md
src/bizops/: __init__.py  cli.py  mcp_server.py
src/bizops/commands/: __init__.py  _export.py  alerts.py  ask.py  bank.py  briefing.py  budget.py  config.py  expenses.py  foodcost.py  health.py  inventory.py  invoices.py  labor.py  orders.py  payments.py  trends.py  vendor_prices.py  waste.py
src/bizops/connectors/: __init__.py  anthropic_client.py  gmail.py
src/bizops/parsers/: __init__.py  alerts.py  bank_statement.py  briefing.py  budget.py  expenses.py  food_cost.py  health_score.py  inventory.py  invoice.py  labor.py  ordering.py  payments.py  product_extractor.py  reconciliation.py  toast.py  trends.py  vendor_prices.py  waste.py
src/bizops/utils/: __init__.py  config.py  display.py  storage.py
tests/: __init__.py  test_alert_engine.py  test_ask.py  test_bank_parser.py  test_briefing_engine.py  test_budget_engine.py  test_expense_engine.py  test_food_cost_engine.py  test_health_score.py  test_inventory_engine.py  test_invoice_parser.py  test_labor_engine.py  test_mcp_server.py  test_ordering_engine.py  test_payment_engine.py  test_product_extractor.py  test_reconciliation.py  test_sync_tools.py  test_toast_parser.py  test_trend_engine.py  test_vendor_prices.py  test_waste_engine.py
